FullQa New/src/objects/BookingsDelta__c.object
<CustomObject>
    <description>https://jira.avalara.com/browse/ITBSE-1212</description>
    <fields>
        <fullName>Booking_Issue_Resolved_By__c</fullName>
        <label>Booking Issue Resolved By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akansha Gosain</fullName>
                </value>
                <value>
                    <fullName>Alison Cain</fullName>
                </value>
                <value>
                    <fullName>Brent Douma</fullName>
                </value>
                <value>
                    <fullName>Clay Wiggins</fullName>
                </value>
                <value>
                    <fullName>David Halladay</fullName>
                </value>
                <value>
                    <fullName>Mangal Pardeshi</fullName>
                </value>
                <value>
                    <fullName>Navees Ahmed</fullName>
                </value>
                <value>
                    <fullName>Priyanka Duggar</fullName>
                </value>
                <value>
                    <fullName>Kyle Leyh</fullName>
                </value>
                <value>
                    <fullName>Vaibhav Bandge</fullName>
                </value>
                <value>
                    <fullName>Andrew Gill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Issue_Resolved_Date__c</fullName>
        <label>Booking Issue Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bookings_Root_Cause__c</fullName>
        <label>Bookings Root Cause</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRATicketURL__c</fullName>
        <description>A link to the JIRA Ticket that captures the progress/status of resolving an identified Bookings Delta. ITBSX-306</description>
        <formula>IF(ISBLANK(Opportunity__r.JIRATicketURL__c),&quot;&quot;,HYPERLINK( Opportunity__r.JIRATicketURL__c , &quot;Immediate Resolution Tracking&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JIRA Ticket URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_Amount_SF__c</fullName>
        <label>NEW Amount (SF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NEW_Booked_Value_EDW__c</fullName>
        <label>NEW Booked Value (EDW)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OLD_Amount_SF__c</fullName>
        <label>OLD Amount (SF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OLD_Booked_Value_EDW__c</fullName>
        <label>OLD Booked Value (EDW)</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BookingsDelta</relationshipLabel>
        <relationshipName>BookingsDelta</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SystemUpdated__c</fullName>
        <formula>IF(AND(NEW_Amount_SF__c &lt;&gt; 0, NEW_Booked_Value_EDW__c &lt;&gt; 0, NOT(ISNULL(Booking_Issue_Resolved_Date__c)), OLD_Amount_SF__c &lt;&gt; NEW_Amount_SF__c, OLD_Booked_Value_EDW__c &lt;&gt; NEW_Booked_Value_EDW__c), &quot;EDW &amp; SFDC&quot;,

IF(AND(NEW_Amount_SF__c &lt;&gt; 0, NEW_Booked_Value_EDW__c &lt;&gt; 0, NOT(ISNULL(Booking_Issue_Resolved_Date__c)), OLD_Amount_SF__c &lt;&gt; NEW_Amount_SF__c), &quot;SFDC&quot;,

IF(AND(NEW_Amount_SF__c &lt;&gt; 0, NEW_Booked_Value_EDW__c &lt;&gt; 0, NOT(ISNULL(Booking_Issue_Resolved_Date__c)), OLD_Booked_Value_EDW__c &lt;&gt; NEW_Booked_Value_EDW__c), &quot;EDW&quot;,

&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Updated</label>
        <type>Text</type>
    </fields>
    <label>BookingsDelta</label>
    <nameField>
        <displayFormat>BookingDelta#{00000}</displayFormat>
        <label>BookingsDelta Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BookingsDelta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>